--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>huleos-page</title>
+    <title>Julio Cesar Montenegro | Front-end Developer and web designer from Mexicali, Mexico</title>
+    <meta name="description" content="Do you need a new website? Please send me a email at hey[at]huleos.com" />
+    <link rel="canonical" href="https://huleos.com">
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but huleos-page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but huleos page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
